--- a/templates/index1.html
+++ b/templates/index1.html
@@ -56,15 +56,15 @@
     <h1>Python Automation Task Dashboard</h1>
     <div class="container">
         
-        <a class="link" href="https://jatinsadhpatvaportfolio.onrender.com/send_email_page" target="_blank">Send Email</a>
+        <a class="link" href="https://jatinsadhpatvaportfolio.onrender.com/send_email" target="_blank">Send Email</a>
         
-        <a href="https://jatinsadhpatvaportfolio.onrender.com/scrape_google_page" target="_blank">Scrape Google Search</a>
+        <a href="https://jatinsadhpatvaportfolio.onrender.com/scrape_google" target="_blank">Scrape Google Search</a>
         
         <a href="https://jatinsadhpatvaportfolio.onrender.com/find_geo_location" target="_blank">Find Geo Location</a>
         
         <a href="https://jatinsadhpatvaportfolio.onrender.com/text_to_speech" target="_blank">Text to Audio</a>
         
-        <a href="https://jatinsadhpatvaportfolio.onrender.com/send_sms_from_mobile_page" target="_blank">Send SMS</a>
+        <a href="https://jatinsadhpatvaportfolio.onrender.com/send_sms_from_mobile" target="_blank">Send SMS</a>
         
         <a href="https://jatinsadhpatvaportfolio.onrender.com/send_bulk_email" target="_blank">Send Bulk Email</a>
 
