--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Thank You</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="thankyou-section" style="text-align:center; padding:8rem 2rem;">
