--- a/templates/index.html
+++ b/templates/index.html
@@ -215,7 +215,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
 
-        <form action="/submit" method="POST">
+        <form action="https://jatinsadhpatvaportfolio.onrender.com/submit" method="POST">
             <div class="input-box">
                 <input type="text" name="full_name" placeholder="Full Name" required>
                 <input type="email" name="email" placeholder="Email Address" required>
