--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -8,7 +8,7 @@
 <body>
     <section class="thankyou-section" style="text-align:center; padding:8rem 2rem;">
         <h2>Thank you for contacting me, {{ name }}! Your message has been sent.</h2>
-        <a href="/" class="btn" style="margin-top:2rem;">Back to Home</a>
+        <a href="https://jatinsadhpatva.netlify.app/" class="btn" style="margin-top:2rem;">Back to Home</a>
     </section>
 </body>
 </html>
